--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "mongoose": "^5.3.16",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
-    "reactstrap": "^8.5.1"
+    "react-router-dom": "^5.2.0"
   }
 }
